--- a/index.html
+++ b/index.html
@@ -52,6 +52,21 @@
           Cart
         </div>
       </div>
+      <!-- ************pnel startde from here ****************** -->
+      <div class="panel">
+        <div class="panel-all">
+          <i class="fa-solid fa-bars"></i>
+          All
+        </div>
+        <div class="panel-options">
+          <p>Today's Deals</p>
+          <p>Customer Service</p>
+          <p>Registry</p>
+          <p>Gift Cards</p>
+          <p>Sell</p>
+        </div>
+        <div class="panel-deals">Shop deals in Electronics</div>
+      </div>
     </header>
   </body>
 </html>
