--- a/index.html
+++ b/index.html
@@ -68,5 +68,31 @@
         <div class="panel-deals">Shop deals in Electronics</div>
       </div>
     </header>
+
+    <div class="hero-section">
+      <div class="hero-message">
+        <p>
+          You on amazon.com. You can also shop on Amazon india for millions of
+          products with fast local delivery.
+          <a> Click here to go to amazon.in </a>
+        </p>
+      </div>
+    </div>
+    <!-------------- shop-section --------------->
+    <div class="shop-section">
+      <div class="box1 box">
+        <div class="box-content">
+          <h2>Health & Personal Care</h2>
+          <div
+            class="box-image"
+            style="background-image: url('box1_image.jpg')"
+          ></div>
+          <p>See more</p>
+        </div>
+      </div>
+      <div class="box2 box">box2</div>
+      <div class="box box">box3</div>
+      <div class="box4 box">box4</div>
+    </div>
   </body>
 </html>
